[gd_scene load_steps=25 format=4 uid="uid://gmao1bw0xgpl"]

[ext_resource type="Texture2D" uid="uid://dy81k0oxeyxa6" path="res://Assets/Dessert Map/Dessert-Tiles.png" id="1_1g7pl"]
[ext_resource type="Script" uid="uid://14xk0h1pf7us" path="res://Areas/tutorial.gd" id="1_c5plm"]
[ext_resource type="Texture2D" uid="uid://bjmx22pml8bvm" path="res://Assets/Dessert Map/pyramid.png" id="2_qcivo"]
[ext_resource type="Texture2D" uid="uid://cpqqypanyfv3b" path="res://Assets/Dessert Map/rocks.png" id="3_w6q01"]
[ext_resource type="PackedScene" uid="uid://bk3vlngnal1r6" path="res://Player/player.tscn" id="4_qcivo"]
[ext_resource type="PackedScene" uid="uid://ckkrott6tmvs3" path="res://UI/UI.tscn" id="6_4t5x3"]
[ext_resource type="FontFile" uid="uid://bgrgca3qc6dxo" path="res://Assets/Fonts/Silkscreen-Regular.ttf" id="6_pximk"]
[ext_resource type="FontFile" uid="uid://c087o32n144xo" path="res://Assets/Fonts/Silkscreen-Bold.ttf" id="7_pximk"]
[ext_resource type="PackedScene" uid="uid://ch61q6045g2b4" path="res://Pickup/cookie.tscn" id="8_jw656"]
[ext_resource type="Texture2D" uid="uid://b0ql7d1kirvko" path="res://Assets/Main Menu/button_rectangle_depth_flat.png" id="9_77gea"]
[ext_resource type="Resource" uid="uid://cncmcw36ala46" path="res://Pickup/Cookie Resources/lion_crackers.tres" id="9_khkes"]
[ext_resource type="Texture2D" uid="uid://ba76wp4u7b068" path="res://Assets/Main Menu/button_rectangle_depth_border.png" id="10_y5la3"]
[ext_resource type="Texture2D" uid="uid://2rjibsfwdvns" path="res://Assets/Main Menu/button_rectangle_depth_gradient.png" id="11_ygrh2"]
[ext_resource type="AudioStream" uid="uid://cy6k2ufyu8d34" path="res://Assets/Sounds/button.wav" id="12_y5la3"]
[ext_resource type="AudioStream" uid="uid://chk2job1t4pik" path="res://Assets/Sounds/tutorial.wav" id="13_ygrh2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w6q01"]
texture = ExtResource("1_1g7pl")
texture_region_size = Vector2i(32, 32)
use_texture_padding = false
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -12.108, -12.5859, -12.108, -12.5859, 16, -16, 16)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, -12.108, -16, -12.5859, -16, -12.5859)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, 12.108, 16, 12.108, -12.5859, -16, -12.5859, -16, -16)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -12.108, -16, -12.5859, 16, -12.5859, 16)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, 12.108, 16, 12.5859, -16, 12.5859, -16)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 16, -16, -16, -12.108, -16, -12.108, 12.5859, 16, 12.5859, 16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, 12.108, 16, 12.5859, 16, 12.5859)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 16, -16, 16, -16, 12.108, 12.5859, 12.108, 12.5859, -16, 16, -16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4t5x3"]
texture = ExtResource("2_qcivo")
texture_region_size = Vector2i(41, 41)
0:0/0 = 0
1:0/0 = 0
1:1/0 = 0
2:1/0 = 0
2:2/0 = 0
1:2/0 = 0
0:1/0 = 0
2:0/0 = 0
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8eli6"]
texture = ExtResource("3_w6q01")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8gp1h"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_w6q01")
sources/1 = SubResource("TileSetAtlasSource_4t5x3")
sources/2 = SubResource("TileSetAtlasSource_8eli6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qcivo"]
size = Vector2(337, 237)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eh6eq"]
texture = ExtResource("9_77gea")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hs8cx"]
texture = ExtResource("10_y5la3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3vgv6"]
texture = ExtResource("11_ygrh2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5plm"]
size = Vector2(233, 366)

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_c5plm")

[node name="TextureRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = -2
offset_left = 324.0
offset_top = -610.0
offset_right = 1766.0
offset_bottom = 246.0
color = Color(0.876647, 0.615706, 0.374357, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["walls"]]
z_index = -1
tile_map_data = PackedByteArray("AAAJAAcAAAABAAIAAAAIAAcAAAABAAIAAAAHAAcAAAABAAIAAAAGAAcAAAABAAIAAAAFAAcAAAABAAIAAAAEAAcAAAABAAIAAAADAAcAAAABAAIAAAACAAcAAAABAAIAAAABAAcAAAABAAIAAAAAAAcAAAABAAIAAAD//wcAAAABAAIAAAD+/wcAAAABAAIAAAD9/wcAAAAAAAIAAAD9/wYAAAAAAAEAAAAHAAYAAAABAAEAAAAIAAYAAAABAAEAAAAGAAYAAAABAAEAAAAFAAYAAAABAAEAAAAEAAYAAAABAAEAAAADAAYAAAABAAEAAAACAAYAAAABAAEAAAABAAYAAAABAAEAAAAAAAYAAAABAAEAAAD//wYAAAABAAEAAAD+/wYAAAABAAEAAAD9/wUAAAAAAAEAAAD9/wQAAAAAAAEAAAD9/wMAAAAAAAAAAAD+/wMAAAABAAAAAAD//wMAAAABAAAAAAAAAAMAAAABAAAAAAABAAMAAAABAAAAAAACAAMAAAABAAAAAAADAAMAAAABAAAAAAAEAAMAAAABAAAAAAAFAAMAAAABAAAAAAAGAAMAAAABAAAAAAAHAAMAAAABAAAAAAAIAAMAAAABAAAAAAAIAAQAAAABAAEAAAAHAAQAAAABAAEAAAAGAAQAAAABAAEAAAAFAAQAAAABAAEAAAAEAAQAAAABAAEAAAADAAQAAAABAAEAAAACAAQAAAABAAEAAAABAAQAAAABAAEAAAAAAAQAAAABAAEAAAD//wQAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD//wUAAAABAAEAAAAAAAUAAAABAAEAAAABAAUAAAABAAEAAAACAAUAAAABAAEAAAADAAUAAAABAAEAAAAEAAUAAAABAAEAAAAFAAUAAAABAAEAAAAGAAUAAAABAAEAAAAHAAUAAAABAAEAAAAIAAUAAAABAAEAAAAJAAMAAAABAAAAAAAKAAMAAAABAAAAAAALAAMAAAABAAAAAAAMAAMAAAABAAAAAAANAAMAAAABAAAAAAAOAAMAAAABAAAAAAAPAAMAAAABAAAAAAAQAAMAAAABAAAAAAARAAMAAAABAAAAAAASAAMAAAABAAAAAAATAAMAAAABAAAAAAAUAAMAAAABAAAAAAAVAAMAAAABAAAAAAAWAAMAAAABAAAAAAAXAAMAAAABAAAAAAAYAAMAAAABAAAAAAAZAAMAAAABAAAAAAAaAAMAAAABAAAAAAAbAAMAAAABAAAAAAAcAAMAAAABAAAAAAAdAAMAAAABAAAAAAAeAAMAAAABAAAAAAAfAAMAAAABAAAAAAAgAAMAAAABAAAAAAAhAAMAAAABAAAAAAAiAAMAAAABAAAAAAAjAAMAAAABAAAAAAAkAAMAAAABAAAAAAAlAAMAAAABAAAAAAAmAAMAAAABAAAAAAAnAAMAAAABAAAAAAAoAAMAAAABAAAAAAApAAMAAAABAAAAAAAqAAMAAAABAAAAAAArAAMAAAABAAAAAAAsAAMAAAABAAAAAAAtAAMAAAABAAAAAAAuAAMAAAABAAAAAAAvAAMAAAABAAAAAAAwAAMAAAABAAAAAAAxAAMAAAABAAAAAAAyAAMAAAABAAAAAAAzAAMAAAABAAAAAAAKAAcAAAABAAIAAAALAAcAAAABAAIAAAAMAAcAAAABAAIAAAANAAcAAAABAAIAAAAOAAcAAAABAAIAAAAPAAcAAAABAAIAAAAQAAcAAAABAAIAAAARAAcAAAABAAIAAAASAAcAAAABAAIAAAATAAcAAAABAAIAAAAUAAcAAAABAAIAAAAVAAcAAAABAAIAAAAWAAcAAAABAAIAAAAXAAcAAAABAAIAAAAYAAcAAAABAAIAAAAZAAcAAAABAAIAAAAaAAcAAAABAAIAAAAbAAcAAAABAAIAAAAcAAcAAAABAAIAAAAdAAcAAAABAAIAAAAeAAcAAAABAAIAAAAfAAcAAAABAAIAAAAgAAcAAAABAAIAAAAhAAcAAAABAAIAAAAiAAcAAAABAAIAAAAjAAcAAAABAAIAAAAkAAcAAAABAAIAAAAlAAcAAAABAAIAAAAmAAcAAAABAAIAAAAnAAcAAAABAAIAAAAoAAcAAAABAAIAAAApAAcAAAABAAIAAAAqAAcAAAABAAIAAAArAAcAAAABAAIAAAAsAAcAAAABAAIAAAAtAAcAAAABAAIAAAAuAAcAAAABAAIAAAAvAAcAAAABAAIAAAAwAAcAAAABAAIAAAAxAAcAAAABAAIAAAAyAAcAAAABAAIAAAAzAAcAAAABAAIAAAA0AAMAAAABAAAAAAA0AAQAAAABAAEAAAA0AAUAAAABAAEAAAA0AAYAAAABAAEAAAA0AAcAAAABAAIAAAATAAQAAAABAAEAAAATAAUAAAABAAEAAAATAAYAAAABAAEAAAAUAAQAAAABAAEAAAAUAAUAAAABAAEAAAAUAAYAAAABAAEAAAAVAAQAAAABAAEAAAAVAAUAAAABAAEAAAAVAAYAAAABAAEAAAAWAAQAAAABAAEAAAAWAAUAAAABAAEAAAAWAAYAAAABAAEAAAAXAAQAAAABAAEAAAAXAAUAAAABAAEAAAAXAAYAAAABAAEAAAAYAAQAAAABAAEAAAAYAAUAAAABAAEAAAAYAAYAAAABAAEAAAAZAAQAAAABAAEAAAAZAAUAAAABAAEAAAAZAAYAAAABAAEAAAAaAAQAAAABAAEAAAAaAAUAAAABAAEAAAAaAAYAAAABAAEAAAAbAAQAAAABAAEAAAAbAAUAAAABAAEAAAAbAAYAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAYAAAABAAEAAAAdAAQAAAABAAEAAAAdAAUAAAABAAEAAAAdAAYAAAABAAEAAAAeAAQAAAABAAEAAAAeAAUAAAABAAEAAAAeAAYAAAABAAEAAAAfAAQAAAABAAEAAAAfAAUAAAABAAEAAAAfAAYAAAABAAEAAAAgAAQAAAABAAEAAAAgAAUAAAABAAEAAAAgAAYAAAABAAEAAAAhAAQAAAABAAEAAAAhAAUAAAABAAEAAAAhAAYAAAABAAEAAAAiAAQAAAABAAEAAAAiAAUAAAABAAEAAAAiAAYAAAABAAEAAAAjAAQAAAABAAEAAAAjAAUAAAABAAEAAAAjAAYAAAABAAEAAAAkAAQAAAABAAEAAAAkAAUAAAABAAEAAAAkAAYAAAABAAEAAAAlAAQAAAABAAEAAAAlAAUAAAABAAEAAAAlAAYAAAABAAEAAAAmAAQAAAABAAEAAAAmAAUAAAABAAEAAAAmAAYAAAABAAEAAAAnAAQAAAABAAEAAAAnAAUAAAABAAEAAAAnAAYAAAABAAEAAAAoAAQAAAABAAEAAAAoAAUAAAABAAEAAAAoAAYAAAABAAEAAAApAAQAAAABAAEAAAApAAUAAAABAAEAAAApAAYAAAABAAEAAAAqAAQAAAABAAEAAAAqAAUAAAABAAEAAAAqAAYAAAABAAEAAAArAAQAAAABAAEAAAArAAUAAAABAAEAAAArAAYAAAABAAEAAAAsAAQAAAABAAEAAAAsAAUAAAABAAEAAAAsAAYAAAABAAEAAAAtAAQAAAABAAEAAAAtAAUAAAABAAEAAAAtAAYAAAABAAEAAAAuAAQAAAABAAEAAAAuAAUAAAABAAEAAAAuAAYAAAABAAEAAAAvAAQAAAABAAEAAAAvAAUAAAABAAEAAAAvAAYAAAABAAEAAAAwAAQAAAABAAEAAAAwAAUAAAABAAEAAAAwAAYAAAABAAEAAAAxAAQAAAABAAEAAAAxAAUAAAABAAEAAAAxAAYAAAABAAEAAAAyAAQAAAABAAEAAAAyAAUAAAABAAEAAAAyAAYAAAABAAEAAAAzAAQAAAABAAEAAAAzAAUAAAABAAEAAAAzAAYAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAPAAQAAAABAAEAAAAPAAUAAAABAAEAAAAPAAYAAAABAAEAAAAQAAQAAAABAAEAAAAQAAUAAAABAAEAAAAQAAYAAAABAAEAAAARAAQAAAABAAEAAAARAAUAAAABAAEAAAARAAYAAAABAAEAAAASAAQAAAABAAEAAAASAAUAAAABAAEAAAASAAYAAAABAAEAAAA1AAMAAAABAAAAAAA1AAQAAAABAAEAAAA1AAUAAAABAAEAAAA1AAYAAAABAAEAAAA1AAcAAAABAAIAAAA2AAMAAAABAAAAAAA2AAQAAAABAAEAAAA2AAUAAAABAAEAAAA2AAYAAAABAAEAAAA2AAcAAAABAAIAAAA3AAMAAAABAAAAAAA3AAQAAAABAAEAAAA3AAUAAAABAAEAAAA3AAYAAAABAAEAAAA3AAcAAAABAAIAAAA4AAMAAAABAAAAAAA4AAQAAAABAAEAAAA4AAUAAAABAAEAAAA4AAYAAAABAAEAAAA4AAcAAAABAAIAAAA5AAMAAAABAAAAAAA5AAQAAAABAAEAAAA5AAUAAAABAAEAAAA5AAYAAAABAAEAAAA5AAcAAAABAAIAAAA6AAMAAAABAAAAAAA6AAQAAAABAAEAAAA6AAUAAAABAAEAAAA6AAYAAAABAAEAAAA6AAcAAAABAAIAAAA7AAMAAAABAAAAAAA7AAQAAAABAAEAAAA7AAUAAAABAAEAAAA7AAYAAAABAAEAAAA7AAcAAAABAAIAAAA8AAMAAAABAAAAAAA8AAQAAAABAAEAAAA8AAUAAAABAAEAAAA8AAYAAAABAAEAAAA8AAcAAAABAAIAAAA9AAMAAAABAAAAAAA9AAQAAAABAAEAAAA9AAUAAAABAAEAAAA9AAYAAAABAAEAAAA9AAcAAAABAAIAAAA+AAMAAAABAAAAAAA+AAQAAAABAAEAAAA+AAUAAAABAAEAAAA+AAYAAAABAAEAAAA+AAcAAAABAAIAAAA/AAMAAAABAAAAAAA/AAQAAAABAAEAAAA/AAUAAAABAAEAAAA/AAYAAAABAAEAAAA/AAcAAAABAAIAAABAAAMAAAABAAAAAABAAAQAAAABAAEAAABAAAUAAAABAAEAAABAAAYAAAABAAEAAABAAAcAAAABAAIAAABBAAMAAAABAAAAAABBAAQAAAABAAEAAABBAAUAAAABAAEAAABBAAYAAAABAAEAAABBAAcAAAABAAIAAABCAAMAAAABAAAAAABCAAQAAAABAAEAAABCAAUAAAABAAEAAABCAAYAAAABAAEAAABCAAcAAAABAAIAAABDAAMAAAABAAAAAABDAAQAAAABAAEAAABDAAUAAAABAAEAAABDAAYAAAABAAEAAABDAAcAAAABAAIAAABEAAMAAAABAAAAAABEAAQAAAABAAEAAABEAAUAAAABAAEAAABEAAYAAAABAAEAAABEAAcAAAABAAIAAABFAAMAAAABAAAAAABFAAQAAAABAAEAAABFAAUAAAABAAEAAABFAAYAAAABAAEAAABFAAcAAAABAAIAAABGAAMAAAABAAAAAABGAAQAAAABAAEAAABGAAUAAAABAAEAAABGAAYAAAABAAEAAABGAAcAAAABAAIAAABHAAMAAAABAAAAAABHAAQAAAABAAEAAABHAAUAAAABAAEAAABHAAYAAAABAAEAAABHAAcAAAABAAIAAABIAAMAAAABAAAAAABIAAQAAAABAAEAAABIAAUAAAABAAEAAABIAAYAAAABAAEAAABIAAcAAAABAAIAAABJAAMAAAABAAAAAABJAAQAAAABAAEAAABJAAUAAAABAAEAAABJAAYAAAABAAEAAABJAAcAAAABAAIAAABKAAMAAAABAAAAAABKAAQAAAABAAEAAABKAAUAAAABAAEAAABKAAYAAAABAAEAAABKAAcAAAABAAIAAABLAAMAAAABAAAAAABLAAQAAAABAAEAAABLAAUAAAABAAEAAABLAAYAAAABAAEAAABLAAcAAAABAAIAAABMAAMAAAABAAAAAABMAAQAAAABAAEAAABMAAUAAAABAAEAAABMAAYAAAABAAEAAABMAAcAAAABAAIAAABNAAMAAAABAAAAAABNAAQAAAABAAEAAABNAAUAAAABAAEAAABNAAYAAAABAAEAAABNAAcAAAABAAIAAABOAAMAAAABAAAAAABOAAQAAAABAAEAAABOAAUAAAABAAEAAABOAAYAAAABAAEAAABOAAcAAAABAAIAAABPAAMAAAABAAAAAABPAAQAAAABAAEAAABPAAUAAAABAAEAAABPAAYAAAABAAEAAABPAAcAAAABAAIAAABQAAMAAAABAAAAAABQAAQAAAABAAEAAABQAAUAAAABAAEAAABQAAYAAAABAAEAAABQAAcAAAABAAIAAABRAAMAAAABAAAAAABRAAQAAAABAAEAAABRAAUAAAABAAEAAABRAAYAAAABAAEAAABRAAcAAAABAAIAAABSAAMAAAABAAAAAABSAAQAAAABAAEAAABSAAUAAAABAAEAAABSAAYAAAABAAEAAABSAAcAAAABAAIAAABTAAMAAAABAAAAAABTAAQAAAABAAEAAABTAAUAAAABAAEAAABTAAYAAAABAAEAAABTAAcAAAABAAIAAABUAAMAAAABAAAAAABUAAQAAAABAAEAAABUAAUAAAABAAEAAABUAAYAAAABAAEAAABUAAcAAAABAAIAAABVAAMAAAABAAAAAABVAAQAAAABAAEAAABVAAUAAAABAAEAAABVAAYAAAABAAEAAABVAAcAAAABAAIAAABWAAMAAAABAAAAAABWAAQAAAABAAEAAABWAAUAAAABAAEAAABWAAYAAAABAAEAAABWAAcAAAABAAIAAABXAAMAAAABAAAAAABXAAQAAAABAAEAAABXAAUAAAABAAEAAABXAAYAAAABAAEAAABXAAcAAAABAAIAAABYAAMAAAABAAAAAABYAAQAAAABAAEAAABYAAUAAAABAAEAAABYAAYAAAABAAEAAABYAAcAAAABAAIAAABZAAMAAAABAAAAAABZAAQAAAABAAEAAABZAAUAAAABAAEAAABZAAYAAAABAAEAAABZAAcAAAABAAIAAABaAAMAAAABAAAAAABaAAQAAAABAAEAAABaAAUAAAABAAEAAABaAAYAAAABAAEAAABaAAcAAAABAAIAAABbAAMAAAABAAAAAABbAAQAAAABAAEAAABbAAUAAAABAAEAAABbAAYAAAABAAEAAABbAAcAAAABAAIAAABcAAMAAAABAAAAAABcAAQAAAABAAEAAABcAAUAAAABAAEAAABcAAYAAAABAAEAAABcAAcAAAABAAIAAABdAAMAAAABAAAAAABdAAQAAAABAAEAAABdAAUAAAABAAEAAABdAAYAAAABAAEAAABdAAcAAAABAAIAAABeAAMAAAABAAAAAABeAAQAAAABAAEAAABeAAUAAAABAAEAAABeAAYAAAABAAEAAABeAAcAAAABAAIAAABfAAMAAAABAAAAAABfAAQAAAABAAEAAABfAAUAAAABAAEAAABfAAYAAAABAAEAAABfAAcAAAABAAIAAABgAAMAAAABAAAAAABgAAQAAAABAAEAAABgAAUAAAABAAEAAABgAAYAAAABAAEAAABgAAcAAAABAAIAAABhAAMAAAABAAAAAABhAAQAAAABAAEAAABhAAUAAAABAAEAAABhAAYAAAABAAEAAABhAAcAAAABAAIAAABiAAMAAAABAAAAAABiAAQAAAABAAEAAABiAAUAAAABAAEAAABiAAYAAAABAAEAAABiAAcAAAABAAIAAABjAAMAAAABAAAAAABjAAQAAAABAAEAAABjAAUAAAABAAEAAABjAAYAAAABAAEAAABjAAcAAAABAAIAAABkAAMAAAABAAAAAABkAAQAAAABAAEAAABkAAUAAAABAAEAAABkAAYAAAABAAEAAABkAAcAAAABAAIAAABlAAMAAAABAAAAAABlAAQAAAABAAEAAABlAAUAAAABAAEAAABlAAYAAAABAAEAAABlAAcAAAABAAIAAABmAAMAAAABAAAAAABmAAQAAAABAAEAAABmAAUAAAABAAEAAABmAAYAAAABAAEAAABmAAcAAAABAAIAAABnAAMAAAABAAAAAABnAAQAAAABAAEAAABnAAUAAAABAAEAAABnAAYAAAABAAEAAABnAAcAAAABAAIAAABoAAMAAAABAAAAAABoAAQAAAABAAEAAABoAAUAAAABAAEAAABoAAYAAAABAAEAAABoAAcAAAABAAIAAABpAAMAAAABAAAAAABpAAQAAAABAAEAAABpAAUAAAABAAEAAABpAAYAAAABAAEAAABpAAcAAAABAAIAAABqAAMAAAABAAAAAABqAAQAAAABAAEAAABqAAUAAAABAAEAAABqAAYAAAABAAEAAABqAAcAAAABAAIAAABrAAMAAAABAAAAAABrAAQAAAABAAEAAABrAAUAAAABAAEAAABrAAYAAAABAAEAAABrAAcAAAABAAIAAABsAAMAAAABAAAAAABsAAQAAAABAAEAAABsAAUAAAABAAEAAABsAAYAAAABAAEAAABsAAcAAAABAAIAAABtAAMAAAABAAAAAABtAAQAAAABAAEAAABtAAUAAAABAAEAAABtAAYAAAABAAEAAABtAAcAAAABAAIAAABuAAMAAAABAAAAAABuAAQAAAABAAEAAABuAAUAAAABAAEAAABuAAYAAAABAAEAAABuAAcAAAABAAIAAABvAAMAAAABAAAAAABvAAQAAAABAAEAAABvAAUAAAABAAEAAABvAAYAAAABAAEAAABvAAcAAAABAAIAAABwAAMAAAABAAAAAABwAAQAAAABAAEAAABwAAUAAAABAAEAAABwAAYAAAABAAEAAABwAAcAAAABAAIAAABxAAMAAAABAAAAAABxAAQAAAABAAEAAABxAAUAAAABAAEAAABxAAYAAAABAAEAAABxAAcAAAABAAIAAAByAAMAAAABAAAAAAByAAQAAAABAAEAAAByAAUAAAABAAEAAAByAAYAAAABAAEAAAByAAcAAAABAAIAAABzAAMAAAABAAAAAABzAAQAAAABAAEAAABzAAUAAAABAAEAAABzAAYAAAABAAEAAABzAAcAAAABAAIAAAB0AAMAAAACAAAAAAB0AAQAAAACAAEAAAB0AAUAAAACAAEAAAB0AAYAAAACAAEAAAB0AAcAAAACAAIAAAA=")
tile_set = SubResource("TileSet_8gp1h")

[node name="Player" parent="." instance=ExtResource("4_qcivo")]
position = Vector2(-55, 206)
yoyoatk_scene = null

[node name="Label" type="Label" parent="."]
offset_left = -81.0
offset_top = 102.0
offset_right = 117.0
offset_bottom = 177.0
theme_override_fonts/font = ExtResource("6_pximk")
text = "W A S D - movement
left click - attack
"

[node name="Label2" type="Label" parent="."]
offset_left = 303.0
offset_top = 103.0
offset_right = 599.0
offset_bottom = 178.0
theme_override_fonts/font = ExtResource("6_pximk")
text = "Pick up cookies to get power"

[node name="Label3" type="Label" parent="."]
offset_left = 789.0
offset_top = 107.0
offset_right = 1407.0
offset_bottom = 182.0
theme_override_fonts/font = ExtResource("6_pximk")
text = "Powers will scale of potency, which accumulates over time"

[node name="Label4" type="Label" parent="."]
offset_left = 833.0
offset_top = 220.0
offset_right = 1391.0
offset_bottom = 295.0
theme_override_fonts/font = ExtResource("7_pximk")
text = "Potency decreases when a cookie is picked up"

[node name="Label5" type="Label" parent="."]
offset_left = 1594.0
offset_top = 105.0
offset_right = 2152.0
offset_bottom = 180.0
text = "If potency is 0, Cookie skills are void"

[node name="Label7" type="Label" parent="."]
offset_left = 1740.0
offset_top = 221.0
offset_right = 2298.0
offset_bottom = 296.0
theme_override_fonts/font = ExtResource("6_pximk")
text = "Higher Potency == New Cookies, Stronger Powers"

[node name="Label6" type="Label" parent="."]
offset_left = 2078.0
offset_top = 105.0
offset_right = 2636.0
offset_bottom = 180.0
text = "Too much potency deals damage to you if left unchecked"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(2941, 108)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(792, 76)
shape = SubResource("RectangleShape2D_qcivo")

[node name="UI" parent="." instance=ExtResource("6_4t5x3")]

[node name="SkipButton" type="Button" parent="UI"]
offset_left = 1048.0
offset_top = 20.0
offset_right = 1130.0
offset_bottom = 51.0
theme_override_styles/hover = SubResource("StyleBoxTexture_eh6eq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hs8cx")
theme_override_styles/normal = SubResource("StyleBoxTexture_3vgv6")
text = "SKIP"

[node name="buttonsounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_y5la3")
volume_db = -20.0
bus = &"SFX"

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ygrh2")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="Cookie" parent="." instance=ExtResource("8_jw656")]
position = Vector2(449, 187)
cookie = ExtResource("9_khkes")

[node name="SetPot0" type="Area2D" parent="."]

[node name="Area2D" type="CollisionShape2D" parent="SetPot0"]
position = Vector2(1582, 194)
shape = SubResource("RectangleShape2D_c5plm")

[node name="SetPot3" type="Area2D" parent="."]

[node name="Area2D" type="CollisionShape2D" parent="SetPot3"]
position = Vector2(2027, 181)
shape = SubResource("RectangleShape2D_c5plm")

[node name="Cookie2" parent="." instance=ExtResource("8_jw656")]
position = Vector2(1744, 183)

[connection signal="pressed" from="UI/SkipButton" to="." method="_on_skip_button_pressed"]
